--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이희주 | Mega coffee 노예</title>
+    <title></title>
     
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -42,9 +42,9 @@
             <!-- 데스크탑 내비게이션 -->
             <nav class="hidden md:flex space-x-8">
                 <a href="#about" class="hover:text-cyan-400 transition-colors">소개</a>
-                <a href="#skills" class="hover:text-cyan-400 transition-colors">기술</a>
-                <a href="#portfolio" class="hover:text-cyan-400 transition-colors">포트폴리오</a>
-                <a href="#contact" class="hover:text-cyan-400 transition-colors">연락처</a>
+                <a href="#skills" class="hover:text-cyan-400 transition-colors">주챔</a>
+                <a href="#portfolio" class="hover:text-cyan-400 transition-colors">최근 전적/승률</a>
+                <a href="#contact" class="hover:text-cyan-400 transition-colors">인스타</a>
             </nav>
 
             <!-- 모바일 메뉴 버튼 (햄버거) -->
@@ -56,9 +56,9 @@
         <!-- 모바일 메뉴 (숨겨진 상태) -->
         <div id="mobile-menu" class="hidden md:hidden">
             <a href="#about" class="block py-2 px-6 text-center hover:bg-gray-700">소개</a>
-            <a href="#skills" class="block py-2 px-6 text-center hover:bg-gray-700">기술</a>
-            <a href="#portfolio" class="block py-2 px-6 text-center hover:bg-gray-700">포트폴리오</a>
-            <a href="#contact" class="block py-2 px-6 text-center hover:bg-gray-700">연락처</a>
+            <a href="#skills" class="block py-2 px-6 text-center hover:bg-gray-700">주챔</a>
+            <a href="#portfolio" class="block py-2 px-6 text-center hover:bg-gray-700">최근 전적/승률</a>
+            <a href="https://www.instagram.com/p0sh_ha" class="block py-2 px-6 text-center hover:bg-gray-700">인스타</a>
         </div>
     </header>
 
@@ -68,8 +68,8 @@
         <section id="hero" class="text-center py-10 md:py-20">
              <!-- src에 이미지 파일 경로를 넣어주세요 (예: "profile.jpg") -->
             <img src="images/profile.jpg" alt="프로필 사진" class="w-40 h-40 mx-auto rounded-full mb-6 border-4 border-gray-700 shadow-lg">
-            <h1 class="text-4xl md:text-6xl font-bold text-white mb-4">안녕하세요, 이희주입니다.</h1>
-            <p class="text-lg md:text-xl text-gray-400 mb-8">전에는 서브웨이 노예였다가, 지금은 메가커피 노예입니다.</p>
+            <h1 class="text-4xl md:text-6xl font-bold text-white mb-4" style="font-size: 36px;">안녕하세요! HEEJUDY입니다.</h1>
+            <p class="text-lg md:text-xl text-gray-400 mb-8">본업이 작곡가인 게임 중독자.</p>
             <div class="flex justify-center space-x-6">
                 <!-- 아이콘: Heroicons (https://heroicons.com/) -->
                 <a href="#" class="text-gray-400 hover:text-white transition-colors" title="GitHub">
@@ -86,79 +86,57 @@
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">소개</h2>
             <div class="grid md:grid-cols-5 gap-10 items-center">
                 <div class="md:col-span-3 text-lg leading-relaxed text-gray-300">
-                    <p class="mb-4">저는 올해 20살이고 6개월의 서브웨이 경력을 가지고있습니다. 현재는 '메가커피'라는 카페 프랜차이즈와 노예 계약을 했습니다.</p>
-                    <p class="mb-4">취미로는 '발로란트'라는 게임을 하고 있습니다. 저는 제 자신이 잘한다고 생각해서 다른 사람들이 저한테 뭐라고 그러면 짜증이 많이 납니다.</p>
-                    <p>근데 저는 개벌레 브론즈가 맞는거 같습니다. 저는 병신입니다. 감사합니다.</p>
+                    <p class="mb-4">이름: 👸이희주</p>
+                    <p class="mb-4">나이: 2006년생</p>
+                    <p class="mb-4">취미: 🕹️게임</p>
+                    <p class="mb-4">본업: 🎹작곡</p>
                 </div>
                 <div class="md:col-span-2 relative h-80 rounded-lg shadow-2xl overflow-hidden">
-                    <img src="https://placehold.co/600x400/1e293b/38bdf8?text=Workspace" alt="작업 공간 이미지" class="w-full h-full object-cover">
+                    <img src="images/profile.jpg" alt="작업 공간 이미지" class="w-full h-full object-cover">
                 </div>
             </div>
         </section>
 
-        <!-- ===== 기술 (Skills) ===== -->
+        <!-- ===== 주요 챔피언(main champions) ===== -->
         <section id="skills" class="py-20 reveal">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">기술</h2>
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-8 text-center">
-                <div class="bg-gray-800 p-6 rounded-lg hover:bg-gray-700 transition-colors">
-                    <p class="text-5xl md:text-6xl mb-2">🤬</p>
-                    <h3 class="text-lg md:text-xl font-semibold">쌍욕하기</h3>
-                </div>
-                <div class="bg-gray-800 p-6 rounded-lg hover:bg-gray-700 transition-colors">
-                    <p class="text-5xl md:text-6xl mb-2">🩸</p>
-                    <h3 class="text-lg md:text-xl font-semibold">마법의 날</h3>
-                </div>
-                <div class="bg-gray-800 p-6 rounded-lg hover:bg-gray-700 transition-colors">
-                    <p class="text-5xl md:text-6xl mb-2">🐒</p>
-                    <h3 class="text-lg md:text-xl font-semibold">빡대가리</h3>
-                </div>
-                <div class="bg-gray-800 p-6 rounded-lg hover:bg-gray-700 transition-colors">
-                    <p class="text-5xl md:text-6xl mb-2">🐷</p>
-                    <h3 class="text-lg md:text-xl font-semibold">폭식하기</h3>
-                </div>
-            </div>
+                        <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">주요 챔피언</h2>
+                        <div class="grid grid-cols-2 gap-4 md:gap-8 text-center">
+                            <!-- 게코 -->
+                            <div class="bg-gray-800 p-6 rounded-lg hover:bg-gray-700 transition-colors">
+                                <img src="images/게코.jpeg" alt="게코" class="w-32 h-32 mx-auto rounded-full mb-4 object-cover">
+                                <h3 class="text-lg md:text-xl font-semibold">게코</h3>
+                            </div>
+                            <!-- 스카이 -->
+                            <div class="bg-gray-800 p-6 rounded-lg hover:bg-gray-700 transition-colors">
+                                <img src="images/스카이.jpeg" alt="스카이" class="w-32 h-32 mx-auto rounded-full mb-4 object-cover">
+                                <h3 class="text-lg md:text-xl font-semibold">스카이</h3>
+                            </div>
+                        </div>
         </section>
 
         <!-- ===== 포트폴리오 (Portfolio) ===== -->
         <section id="portfolio" class="py-20 reveal">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">포트폴리오</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- 프로젝트 카드 1 -->
-                <div class="bg-gray-800 rounded-lg overflow-hidden group">
-                    <img src="images/subway.png" alt="프로젝트 1" class="w-full h-48 object-cover group-hover:scale-105 transition-transform">
-                    <div class="p-6">
-                        <h3 class="text-xl md:text-2xl font-bold mb-2">서브웨이</h3>
-                        <p class="text-gray-400 mb-4">샌드위치 다이스끼❤️</p>
-                        <a href="#" class="text-cyan-400 hover:underline">자세히 보기 &rarr;</a>
-                    </div>
-                </div>
-                <!-- 프로젝트 카드 2 -->
-                <div class="bg-gray-800 rounded-lg overflow-hidden group">
-                    <img src="images/MeagCoffee.jpeg" alt="프로젝트 2" class="w-full h-48 object-cover group-hover:scale-105 transition-transform">
-                    <div class="p-6">
-                        <h3 class="text-xl md:text-2xl font-bold mb-2">메가커피</h3>
-                        <p class="text-gray-400 mb-4">진상 손놈 씨발놈❤️</p>
-                        <a href="#" class="text-cyan-400 hover:underline">자세히 보기 &rarr;</a>
-                    </div>
-                </div>
-                <!-- 프로젝트 카드 3 -->
-                <div class="bg-gray-800 rounded-lg overflow-hidden group">
-                    <img src="images/Val.jpeg" alt="프로젝트 3" class="w-full h-48 object-cover group-hover:scale-105 transition-transform">
-                    <div class="p-6">
-                        <h3 class="text-xl md:text-2xl font-bold mb-2">발로란트</h3>
-                        <p class="text-gray-400 mb-4">똥쟁이년💩</p>
-                        <a href="#" class="text-cyan-400 hover:underline">자세히 보기 &rarr;</a>
-                    </div>
-                </div>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">게임 전적 & 챔피언별 승률</h2>
+            <div class="bg-gray-800 rounded-lg p-8 max-w-2xl mx-auto mb-8">
+                <form id="searchForm" class="flex flex-col md:flex-row items-center gap-4 justify-center">
+                    <input type="text" id="playerName" class="px-4 py-2 rounded bg-gray-700 text-white focus:outline-none" placeholder="플레이어 닉네임 입력">
+                    <button type="submit" class="bg-cyan-500 hover:bg-cyan-600 text-white font-bold py-2 px-6 rounded transition-colors">전적 검색</button>
+                </form>
+                <div id="searchResult" class="mt-6 text-center text-gray-300"></div>
+            </div>
+            <div class="bg-gray-800 rounded-lg p-8 max-w-2xl mx-auto">
+                <h3 class="text-xl font-bold mb-4 text-center">챔피언별 승률</h3>
+                <canvas id="winrateChart" height="200"></canvas>
             </div>
         </section>
 
         <!-- ===== 연락처 (Contact) ===== -->
         <section id="contact" class="py-20 text-center reveal">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-4">현피 뜰 새끼만 연락해라.</h2>
-            <p class="text-lg text-gray-400 mb-8">010-XXXX-XXXX</p>
-            <a href="mailto:your.email@example.com" class="bg-cyan-500 hover:bg-cyan-600 text-white font-bold py-3 px-6 md:px-8 rounded-full transition-colors text-md md:text-lg">
-                전화 하기
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-4">Instagram</h2>
+            <p class="text-lg text-gray-400 mb-8">p0sh_ha</p>
+            <a href="https://www.instagram.com/p0sh_ha" class="bg-cyan-500 hover:bg-cyan-600 text-white font-bold py-3 px-6 md:px-8 rounded-full transition-colors text-md md:text-lg">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 448 512" style="display:inline;vertical-align:middle;margin-right:8px;"><path d="M224,202.66A53.34,53.34,0,1,0,277.34,256,53.38,53.38,0,0,0,224,202.66Zm124.71-41a54,54,0,0,0-30.36-30.36C293.19,120,256,118.13,224,118.13s-69.19,1.87-94.36,13.17a54,54,0,0,0-30.36,30.36C120,162.81,118.13,200,118.13,232s1.87,69.19,13.17,94.36a54,54,0,0,0,30.36,30.36C162.81,392,200,393.87,232,393.87s69.19-1.87,94.36-13.17a54,54,0,0,0,30.36-30.36C392,349.19,393.87,312,393.87,280S392,162.81,348.71,161.66ZM224,338.66A82.66,82.66,0,1,1,306.66,256,82.75,82.75,0,0,1,224,338.66Zm85.4-148.61a19.2,19.2,0,1,1-19.2-19.2A19.2,19.2,0,0,1,309.4,190.05Z"/></svg>
+                Instagram 방문하기
             </a>
         </section>
     </main>
@@ -171,6 +149,52 @@
     </footer>
 
     <script>
+        // Chart.js CDN 동적 삽입
+        (function() {
+            var script = document.createElement('script');
+            script.src = 'https://cdn.jsdelivr.net/npm/chart.js';
+            script.onload = function() {
+                // 기본 데이터 예시
+                const ctx = document.getElementById('winrateChart').getContext('2d');
+                window.winrateChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: {
+                        labels: ['게코', '스카이', '제트', '레이나'],
+                        datasets: [{
+                            label: '승률(%)',
+                            data: [62, 55, 48, 70],
+                            backgroundColor: [
+                                '#38bdf8', '#34d399', '#f472b6', '#fbbf24'
+                            ],
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        plugins: {
+                            legend: { display: false },
+                            title: { display: false }
+                        },
+                        scales: {
+                            y: { beginAtZero: true, max: 100 }
+                        }
+                    }
+                });
+            };
+            document.head.appendChild(script);
+        })();
+
+        // 전적 검색 폼 예시 동작 (실제 API 연동 필요)
+        document.getElementById('searchForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const player = document.getElementById('playerName').value.trim();
+            const resultDiv = document.getElementById('searchResult');
+            if(player === '') {
+                resultDiv.textContent = '닉네임을 입력하세요.';
+                return;
+            }
+            // 실제 API 연동 전 임시 예시
+            resultDiv.innerHTML = `<b>${player}</b>님의 최근 10경기: 6승 4패 (60% 승률)`;
+        });
         // 모바일 메뉴 토글
         const mobileMenuButton = document.getElementById('mobile-menu-button');
         const mobileMenu = document.getElementById('mobile-menu');
